--- a/Heroes_Of_Pymoli.ipynb
+++ b/Heroes_Of_Pymoli.ipynb
@@ -1450,14 +1450,14 @@
     }
    ],
    "source": [
-    "#Trying to calculate the average price per person broken out by gender\n",
+    "#Trying to calculate the average price per person broken out by gender but it's not working :-(\n",
     "avg_pp = count_people/total_purchase_value\n",
     "avg_pp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -1465,19 +1465,19 @@
      "output_type": "stream",
      "text": [
       "   Gender  Purchase Count  Average Purchase Price  Total Purchase Value  \\\n",
-      "0    Male             652                    3.20                361.94   \n",
-      "1  Female             113                    3.02               1967.64   \n",
+      "0    Male             652                    3.02               1967.64   \n",
+      "1  Female             113                    3.20                361.94   \n",
       "2   Other              15                    3.35                 50.19   \n",
       "\n",
       "   Avg Total Purchase Per Person  \n",
-      "0                           4.47  \n",
-      "1                           4.07  \n",
+      "0                           4.07  \n",
+      "1                           4.47  \n",
       "2                           4.56  \n"
      ]
     }
    ],
    "source": [
-    "purchasing_analysis = {'Gender':['Male', 'Female', 'Other'],'Purchase Count':[652, 113, 15],'Average Purchase Price':[3.20,3.02,3.35],'Total Purchase Value':[361.94, 1967.64, 50.19],'Avg Total Purchase Per Person':[4.47, 4.07, 4.56]}\n",
+    "purchasing_analysis = {'Gender':['Male', 'Female', 'Other'],'Purchase Count':[652, 113, 15],'Average Purchase Price':[3.02,3.20,3.35],'Total Purchase Value':[1967.64, 361.94, 50.19],'Avg Total Purchase Per Person':[4.07, 4.47, 4.56]}\n",
     "df = pd.DataFrame(purchasing_analysis)\n",
     "print(df)"
    ]
